add pagination, room thumb, like, comment  comps

--- a/src/components/templates/status/status.css
+++ b/src/components/templates/status/status.css
@@ -1,6 +1,6 @@
 .status-wrapper{
 	/* height: 300px; */
-background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)) , url("../../../public/images/status/bg.jpg");
+background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)) , url("../../../../public/images/status/bg.jpg");
 /* background-position:center; */
 background-size: cover;
 background-attachment: fixed;
