--- a/src/pages/roomSearch/roomSearch.css
+++ b/src/pages/roomSearch/roomSearch.css
@@ -36,4 +36,35 @@
 	backdrop-filter: blur(5px);
 	border: 1px solid #ffffff10;
 	box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
+}
+
+
+
+
+/* --------------------------------------------------- */
+
+
+
+
+
+
+.results-wrapper{
+	margin: 50px 0;
+	/* background-color: rgba(0, 0, 0, 0.1);
+	backdrop-filter: blur(5px);
+	border: 1px solid #ffffff10;
+	box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
+
+}
+
+
+
+.results-container{
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	gap: 10px;
+
+
 }
